--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,40 @@
 <resources>
 
     <string name="app_name">Saldo TUC</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_card_add_label">Agregar tarjeta</string>
     <string name="title_activity_card_add">Agregar tarjeta</string>
-    <string name="action_settings">Settings</string>
-    <string name="name_hint">Nombre</string>
-    <string name="card_hint">Número TUC</string>
+
+    <string name="name_label">Nombre</string>
+    <string name="name_hint">Agrega un nombre</string>
+    <string name="card_label">Número TUC</string>
+    <string name="card_hint">E.j: 00000000</string>
+    <string name="notification_label">Notificaciones de saldo via SMS</string>
+    <string name="phone_label">Número de teléfono</string>
+    <string name="phone_hint">Agrega un teléfono</string>
+    <string name="hour_label">Hora a notificar</string>
+    <string name="verification_hint">Se enviará un único mensaje SMS para verificar este número de móvil.</string>
+
     <string name="menu_send_label">Enviar</string>
     <string name="card_add_error_title">Oops!</string>
-    <string name="card_add_error_message">Por favor, asegúrese de introducir un nombre y un número de tarjeta</string>
+    <string name="card_add_error_message">Por favor, asegúrese de introducir un nombre y un número de tarjeta valido</string>
+
+    <string-array name="hours">
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>12</item>
+    </string-array>
+
+    <string-array name="ampm">
+        <item>a.m.</item>
+        <item>p.m.</item>
+    </string-array>
 
 </resources>
