crear SaldoTucServcice para comunicacion con la API, guardar tarjeta en servidor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
         <item>08</item>
         <item>09</item>
         <item>10</item>
+        <item>11</item>
         <item>12</item>
     </string-array>
 
