ocultar loader aun cuando hay error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="card_add_error_title">Oops!</string>
     <string name="card_add_error_message">Por favor, asegúrese de introducir un nombre y un número de tarjeta valido</string>
     <string name="card_success">Tarjeta guardada</string>
+    <string name="card_invalidad">"No es un número de tarjeta TUC ó está inactivo"</string>
 
     <string-array name="hours">
         <item>1</item>
