--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="hour_label">Hora a notificar</string>
     <string name="verification_hint">Se enviará un único mensaje SMS para verificar este número de móvil.</string>
     <string name="menu_save_label">Guardar</string>
+    <string name="menu_update_label">Actualizar</string>
     <string name="card_add_error_message">Por favor, asegúrese de introducir un nombre y un número de tarjeta valido</string>
     <string name="card_add_phone_error_message">Número de teléfono inválido</string>
     <string name="card_add_duplicate_number_error_message">El número de tarjeta ya esta asociado</string>
