--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,11 @@
     <string name="app_name">Saldo TUC</string>
     <string name="menu_card_add_label">Agregar tarjeta</string>
     <string name="title_activity_card_add">Agregar tarjeta</string>
-    <string name="name_label">Nombre</string>
-    <string name="name_hint">Agrega un nombre</string>
-    <string name="card_label">Número TUC</string>
-    <string name="card_hint">E.j: 00000000</string>
-    <string name="card_checkbox_label">Notificaciones de saldo via SMS</string>
-    <string name="phone_label">Número de teléfono</string>
-    <string name="phone_hint">Agrega un teléfono</string>
-    <string name="hour_label">Hora a notificar</string>
+    <string name="name_hint">Nombre</string>
+    <string name="card_hint">Número TUC</string>
+    <string name="card_checkbox_label">NOTIFICACIONES SMS</string>
+    <string name="phone_hint">Número de teléfono</string>
+    <string name="hour_label">HORA A NOTIFICAR</string>
     <string name="verification_hint">Se enviará un único mensaje SMS para verificar este número de móvil.</string>
     <string name="menu_save_label">Guardar</string>
     <string name="menu_update_label">Actualizar</string>
