divisor en actions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     </string-array>
 
     <string name="title_activity_card_update">Actualizar tarjeta</string>
+    <string name="content_desc_actions_divider">Divisor</string>
 
 </resources>
