--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
 
     <string name="title_activity_card_update">Actualizar tarjeta</string>
     <string name="content_desc_actions_divider">Divisor</string>
+    <string name="title_activity_card_statistics">Grafica</string>
 
 </resources>
