cambiar nombre titulo CardAddActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="network_error">No se pudo establecer la conexión</string>
     <string name="app_name">Saldo TUC</string>
     <string name="title_activity_main">Tarjetas</string>
-    <string name="menu_card_add_label">Agregar tarjeta</string>
-    <string name="title_activity_card_add">Agregar tarjeta</string>
+    <string name="menu_card_add_label">Nueva tarjeta</string>
+    <string name="title_activity_card_add">Nueva tarjeta</string>
     <string name="name_hint">Nombre</string>
     <string name="card_hint">Número TUC</string>
     <string name="card_checkbox_label">NOTIFICACIONES SMS</string>
