--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="title_activity_card_add">Nueva tarjeta</string>
     <string name="name_hint">Nombre</string>
     <string name="card_hint">Número TUC</string>
-    <string name="card_checkbox_label">NOTIFICACIONES SMS</string>
+    <string name="card_checkbox_label">NOTIFICACIONES PUSH</string>
     <string name="phone_hint">Número de teléfono</string>
     <string name="hour_label">HORA A NOTIFICAR</string>
     <string name="verification_hint">Se enviará un único mensaje SMS para verificar este número de móvil.</string>
