notifications based on material design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="card_add_duplicate_number_error_message">El número de tarjeta ya esta asociado</string>
     <string name="card_success_save">Tarjeta guardada</string>
     <string name="card_success_update">Tarjeta actualizada</string>
-    <string name="card_success_delete">Tarjeta borrada</string>
+    <string name="card_success_delete">Tarjeta eliminada</string>
     <string name="card_invalid">%1$s no es un número de tarjeta TUC ó está inactivo</string>
     <string name="title_activity_card_update">Editar tarjeta</string>
     <string name="content_desc_actions_divider">Divisor</string>
